# Swarm

./: .gitignore  COMMUNICATION.md  Nový Text Document.txt  generate_video.py  goals.py  pyproject.toml  requirements.txt  run_pipeline.py  topdown_engine.py  universal_env.py
Algorthimc_layer - blueprint/: SAFETY_LAYER_IMPLEMENTATION.md
Communication_extensions/: 03_VIRTUAL_PHEROMONES.txt
ENTROPY_ENGINE.V2/: COMMUNICATION_EXPLAINED.md  README.md  benchmark_fps.py  requirements.txt
ENTROPY_ENGINE.V3/: MASTER_TEMPLATE.py  TRAINING_LEARNINGS.md  TRAINING_README.md  WSL2_GPU_GUIDE.md  benchmark_pure.py  benchmark_safety.py  manual_test_viz.py  requirements.txt  run_factory_integration.py  smoke_test.py  smoke_test_full.py  test_distrax.py  test_dual_channel.py  test_event_triggered.py  test_hierarchy.py  test_pheromones.py  test_spatial_comms.py  train.py  train_fast_swarm.py  train_hog_swarm.py  train_massive_hog.py  train_massive_hybrid.py  train_master.py  train_obstacle_comm_viz.py  train_production_factory.py  train_simple_swarm.py  train_with_viz.py  verify_dashboard.py  verify_training.py  viz_certified_model.py  viz_test_safety.py
ENTROPY_ENGINE.V3 - BLUEPRINT/: 00_OVERVIEW.txt  01_CORE_PHYSICS.txt  04_RENDERING.txt  06_BRAIN_MANAGER.txt  08_MIGRATION_FROM_V2.txt  11_HAND_OF_GOD.txt  12_TESTING_AND_VALIDATION.txt
V1_Legacy/: COMMUNICATION.md  README.md  REWARD_FUNCTION_DESIGN.md  SIM2REAL_ROADMAP.md  goals.py  topdown_engine.py
examples/: compare_learning.py  curriculum_level_1.json  forest_search.json  foundation_generalist.json  safety_training.json
(+221 files in other folders)
